# Fish-Species-Classification-MLOps

./: .gcloudignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  ANALYSIS.md  INSTRUCTIONS.md  LICENSE  Project Checklist.md  README.md  cloudbuild.yaml  config.yaml  data.dvc  environment.yml  prediction_database.csv  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_tests.txt  tasks.py
.devcontainer/: devcontainer.json
.dvc/: config
.github/workflows/: data-change.yaml  deploy-cloud-run.yaml  model-registry.yaml  pre-commit-update.yaml  tests.yaml
configs/: sweep.yaml  sweep_config.yaml  train_example.json
dockerfiles/: api.dockerfile  evaluate.dockerfile  train.dockerfile
docs/: API_USAGE.md  LOGGING_AND_SWEEPS.md  README.md  mkdocs.yaml
docs/source/: CLOUD_RUN_DEPLOYMENT.md  DATA_DRIFT_DETECTION.md  LOAD_TESTING.md  MONITORING.md  USAGE.md  WEEK_2_IMPLEMENTATION_REPORT.md
reports/: README.md  report.py
scripts/: setup_gcp_monitoring.sh
src/group_56/: api.py  convert_txt_to_csv.py  data.py  data_drift.py  evaluate.py  extract_features.py  model.py  sweep_agent.py  train.py
src/group_56/wandb/: latest-run
src/group_56/wandb/run-20260121_175645-rwbmoygq/: run-rwbmoygq.wandb
src/group_56/wandb/run-20260121_175645-rwbmoygq/files/: config.yaml  requirements.txt  wandb-metadata.json
tests/: __init__.py  load_test.py  test_api.py  test_data.py  test_model.py
