[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]


[project]
name = "group_56"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "group56", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "click==8.1.7",
    "exceptiongroup==1.3.1",
    "fastapi==0.136.1",
    "filelock==3.20.3",
    "fsspec==2024.2.0",
    "h11==0.16.0",
    "idna==3.11",
    "Jinja2==3.1.6",
    "markdown-it-py==4.0.0",
    "MarkupSafe==3.0.3",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "networkx==3.4.2",
    "numpy==2.2.6",
    "pandas==2.3.3",
    "pillow==12.1.0",
    "prometheus-client==0.21.0",
    "pydantic==2.12.5",
    "pydantic_core==2.41.5",
    "Pygments==2.19.2",
    "evidently>=0.4.30,<0.6.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "rich==14.2.0",
    "loguru==0.7.2",
    "six==1.17.0",
    "starlette==0.46.2",
    "httpx==0.27.2",
    "sympy==1.13.1",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "typer==0.15.2",
    "typing-inspection==0.4.2",
    "typing_extensions==4.15.0",
    "tzdata==2025.3",
    "uvicorn==0.34.2",
    "python-multipart==0.0.9",
    "dvc==3.66.1",
    "dvc-gdrive==3.0.1",
    "dvc-gs==3.0.2",
    "google-cloud-storage==2.19.0",
    "pydrive2==1.21.3",
    "wandb==0.24.0",
]

[project.optional-dependencies]
dev = [
    "invoke==2.2.1",
    "shellingham==1.5.4",
    "pre-commit==4.1.0",
    "pytest==8.3.4",
    "coverage==7.8.0",
    "ruff==0.14.13",
    "mypy==1.12.1",
    "pandas-stubs==2.3.3.260113",
    "mkdocs==1.6.1",
    "mkdocs-material==9.6.1",
    "mkdocstrings-python==1.16.10",
    "locust==2.32.5",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (unused imports, undefined names)
    "I",   # isort (import sorting)
    "N",   # pep8-naming
    "B",   # bugbear (common bugs)
    "UP",  # pyupgrade (modern syntax)
    "C4",  # comprehensions
]

[tool.ruff.lint.isort]
known-third-party = ["wandb"]

[tool.coverage.run]
omit = ["tests/*"]

[tool.coverage.report]
omit = ["/private/var/folders/*", "_remote_module_non_scriptable.py"]

[project.scripts]
data-split = "group_56.data:build_splits_cli"
train-model = "group_56.train:main"
evaluate-model = "group_56.evaluate:main"
